--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=santander
+server.port=8080
+# MySQL database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/santander
+spring.datasource.username=root
+spring.datasource.password=admin
+
+# MySQL JDBC driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
